Add ability to toggle Maximum and Type properties when creating a new Stat

--- a/src/theme/dark.scss
+++ b/src/theme/dark.scss
@@ -138,4 +138,16 @@ $text-input-md-highlight-color: $primary;
             }
         }
     }
+    page-create-stat {
+        .item {
+            .propertyToggle {
+                background-color: $primaryDark;
+            }
+        }
+        .item-divider {
+            .propertyToggle {
+                background-color: $primary;
+            }
+        }
+    }
 }
