--- a/src/pages/create-stat/create-stat.scss
+++ b/src/pages/create-stat/create-stat.scss
@@ -1,3 +1,32 @@
 page-create-stat {
-
+    .item {
+        padding-right: 16px;
+        .propertyToggle {
+            margin-right: 0px;
+        }
+    }
+    .item-divider {
+        padding-top: 7px;
+        padding-bottom: 7px;
+        border-bottom: 1px solid black;
+        .propertyToggle {
+            margin-right: 8px;
+        }
+    }
+    ion-list .item:last-child,
+    ion-list .item-wrapper:last-child .item {
+        border-bottom: none !important;
+    }
+    .item:last-child .item-inner {
+        border-bottom: 1px solid #dedede !important;
+    }
+    input[type="number"] {
+        -webkit-appearance: textfield;
+        -moz-appearance: textfield;
+        appearance: textfield;
+    }
+    input[type=number]::-webkit-inner-spin-button,
+    input[type=number]::-webkit-outer-spin-button {
+        -webkit-appearance: none;
+    }
 }
