--- a/src/pages/create-stat/create-stat.scss
+++ b/src/pages/create-stat/create-stat.scss
@@ -20,4 +20,18 @@ page-create-stat {
     .item:last-child .item-inner {
         border-bottom: 1px solid #dedede !important;
     }
+    .helpText {
+        margin-right: 16px;
+        margin-left: 16px;
+        margin-top: 8px;
+        margin-bottom: 0px;
+        font-size: .80em;
+        padding: 0px;
+        color: #f53d3d;
+        ion-icon::before {
+            font-size: .8em;
+            padding-right: .2em;
+            padding-left: .2em;
+        }
+    }
 }
