--- a/src/theme/dark.scss
+++ b/src/theme/dark.scss
@@ -137,6 +137,9 @@ $text-input-md-highlight-color: $primary;
                 color: darken($secondaryTextLight, 30%);
             }
         }
+        ion-reorder {
+            border-color: $dividers;
+        }
     }
     page-create-stat {
         .item {
