--- a/src/components/app-menu/app-menu.html
+++ b/src/components/app-menu/app-menu.html
@@ -3,19 +3,20 @@
     <ion-header>
         <ion-toolbar class="taller">
             <ion-title>
-                <div *ngIf="mode === templateModeTestVar || (user | async) !== templateNameTestVar; then onlineTitle else offlineTitle"></div>
+                <!-- <div *ngIf="mode === templateModeTestVar || (user | async) !== templateNameTestVar; then onlineTitle else offlineTitle"></div>
                 <ng-template #onlineTitle>
                     {{ user | async }}
                 </ng-template>
                 <ng-template #offlineTitle>
-                    <!-- <div *ngIf="(user | async) === templateNameTestVar; then noUser else login"></div>
-                    <ng-template #noUser> -->
-                    <!-- <button ion-button full (click)="createUser()" menuClose>Create User</button> -->
-                    <!-- </ng-template>
+                    <div *ngIf="(user | async) === templateNameTestVar; then noUser else login"></div>
+                    <ng-template #noUser>
+                    <button ion-button full (click)="createUser()" menuClose>Create User</button>
+                    </ng-template>
                     <ng-template #login>
                         <button ion-button full (click)="login()" menuClose>Login</button>
-                    </ng-template> -->
-                </ng-template>
+                    </ng-template>
+                </ng-template> -->
+                {{ menuTitle }}
             </ion-title>
         </ion-toolbar>
     </ion-header>
