Change theming to be more consistent with Android

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -22,3 +22,16 @@ input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
     -webkit-appearance: none;
 }
+
+ion-item-options:not([icon-left]) .button:not([icon-only]) ion-icon,
+ion-item-options:not([icon-start]) .button:not([icon-only]) ion-icon {
+    padding: 0.7em;
+}
+
+ion-item-options.right .button {
+    background-color: map-get($colors, danger);
+}
+
+ion-item-options.left .button {
+    background-color: map-get($colors, tertiary);
+}
