Add still PNGs replaced with animated GIFs when switching slides in help-slides page

--- a/src/pages/help-slides/help-slides.scss
+++ b/src/pages/help-slides/help-slides.scss
@@ -15,6 +15,7 @@ page-help-slides {
             height: 55%;
             margin-left: .25em;
             margin-right: .25em;
+            margin-top: .25em;
         }
         img {
             width: 453px;
