Correct stat-form-change component to use addition when pressing Enter

--- a/src/components/stat-form-change/stat-form-change.html
+++ b/src/components/stat-form-change/stat-form-change.html
@@ -1,5 +1,6 @@
 <ion-item class="formEdit">
-    <form [formGroup]="editStatForm">
+    <form [formGroup]="editStatForm" (ngSubmit)="formChange(stat, 'PLUS', $event)">
+        <button type="submit" style="display: none;"></button>
         <div>
             <ion-row>
                 <ion-col col-2>
