Add 'swords' icon to help slide

--- a/src/pages/help-slides/help-slides.scss
+++ b/src/pages/help-slides/help-slides.scss
@@ -11,6 +11,11 @@ page-help-slides {
         h3 {
             // background-color: blue;
         }
+        .iconWrapper {
+            height: 50%;
+            margin: 0 auto;
+            margin-bottom: 2em;
+        }
         .imgWrapper {
             height: 50%;
             margin-left: .25em;
