Change 'Character List' to 'Characters'

--- a/src/components/app-menu/app-menu.html
+++ b/src/components/app-menu/app-menu.html
@@ -24,7 +24,7 @@
         <ion-list>
             <button ion-item (click)="charList()" menuClose>
                 <ion-icon name="people" item-start></ion-icon>
-                Character List
+                Characters
             </button>
             <button ion-item (click)="prefNav()" menuClose>
                 <ion-icon name="settings" item-start></ion-icon>
