--- a/src/pages/help-slides/help-slides.scss
+++ b/src/pages/help-slides/help-slides.scss
@@ -8,28 +8,23 @@ page-help-slides {
         height: 100%;
         padding-top: 3.25em;
         padding-bottom: 2em;
-        h3 {
-            // background-color: blue;
-        }
         .iconWrapper {
             height: 50%;
-            margin: 0 auto;
-            margin-bottom: 2em;
+            margin-top: 1em;
+            margin-bottom: 1em;
         }
         .imgWrapper {
             height: 50%;
             margin-left: .25em;
             margin-right: .25em;
-            margin-top: 1em;
-            margin-bottom: 1em;
+            margin-top: 2em;
         }
         img {
-            width: 453px;
-            // background-color: yellow;
+            width: 100%;
+            margin: 0 auto;
         }
         section {
             height: 35%;
-            // background-color: green;
             display: flex;
             flex-direction: column;
             justify-content: center;
