Remove unused imports and old comments

--- a/src/components/app-menu/app-menu.html
+++ b/src/components/app-menu/app-menu.html
@@ -16,7 +16,7 @@
                         <button ion-button full (click)="login()" menuClose>Login</button>
                     </ng-template>
                 </ng-template> -->
-                {{ menuTitle }}
+                Menu
             </ion-title>
         </ion-toolbar>
     </ion-header>
