--- a/src/components/splashscreen/splashscreen.html
+++ b/src/components/splashscreen/splashscreen.html
@@ -1,5 +1,5 @@
 <div id="splashContainer" [style.display]="splashToggle ? 'none' : 'flex'">
     <div class="flexWrap">
-        <img src="../../assets/assets/icon/charsheet.svg" class="logo" alt="">
+        <img src="assets/assets/icon/charsheet.svg" class="logo" alt="">
     </div>
 </div>
