Fix custom sort  icon

--- a/src/pages/character-sheet/character-sheet.scss
+++ b/src/pages/character-sheet/character-sheet.scss
@@ -31,7 +31,7 @@ page-character-sheet {
     }
     .ion-ios-customsort,
     .ion-md-customsort {
-        content: url(../../assets/assets/icon/sort.svg);
+        content: url(../assets/assets/icon/sort.svg);
         display: inline-block;
         width: 20px;
         height: 20px;
