--- a/src/components/splashscreen/splashscreen.scss
+++ b/src/components/splashscreen/splashscreen.scss
@@ -7,7 +7,7 @@ splashscreen {
         left: 0px;
         top: 0px;
         z-index: 500;
-        background-color: #009688;
+        // background-color: #009688;
         color: $textColor;
     }
     .flexWrap {
