Change list styling for Characters and Menu component

--- a/src/components/app-menu/app-menu.html
+++ b/src/components/app-menu/app-menu.html
@@ -22,11 +22,11 @@
     </ion-header>
     <ion-content>
         <ion-list>
-            <button ion-item (click)="charList()" menuClose>
+            <button class="underline" ion-item (click)="charList()" menuClose>
                 <ion-icon name="people" item-start></ion-icon>
                 Characters
             </button>
-            <button ion-item (click)="prefNav()" menuClose>
+            <button class="underline" ion-item (click)="prefNav()" menuClose>
                 <ion-icon name="settings" item-start></ion-icon>
                 Preferences
             </button>
@@ -34,7 +34,7 @@
                 <ion-icon name="help" item-start></ion-icon>
                 Help
             </button>
-            <button ion-item (click)="showAbout()" menuClose>
+            <button class="underline" ion-item (click)="showAbout()" menuClose>
                 <ion-icon name="information" item-start></ion-icon>
                 About
             </button>
